syntax = "proto3";

option csharp_namespace = "GrpcServiceTranscodingEquipment";

import "Protos/google/api/annotations.proto";

service EquipmentsService {
  rpc GetAllPagedEquipments(GetAllPagedEquipmentRequest) returns (PagedEquipmentDto) {
    option (google.api.http) = {
      get: "/api/administration/equipment/paged"
    };
  }

  rpc GetAllEquipment(GetAllEquipmentRequest) returns (EquipmentListDto) {
    option (google.api.http) = {
      get: "/api/administration/equipment"
    };
  }

  rpc CreateEquipment(CreateEquipmentRequest) returns (EquipmentDto3) {
    option (google.api.http) = {
      post: "/api/administration/equipment"
      body: "*"
    };
  }

  rpc UpdateEquipment(UpdateEquipmentRequest) returns (EquipmentDto3) {
    option (google.api.http) = {
      put: "/api/administration/equipment/{id}"
      body: "*"
    };
  }

  rpc DeleteEquipment(DeleteEquipmentRequest) returns (ActionResponse3) {
    option (google.api.http) = {
      delete: "/api/administration/equipment/{id}"
    };
  }
}

message ActionResponse3{
    bool succes = 1;
}

message GetAllPagedEquipmentRequest {
  int32 page = 1;
  int32 pageSize = 2;
}

message PagedEquipmentDto {
  repeated EquipmentDto3 items = 1;
}

message GetAllEquipmentRequest {}

message EquipmentListDto {
  repeated EquipmentDto3 items = 1;
}

message CreateEquipmentRequest {
  EquipmentDto3 equipment = 1;
}

message UpdateEquipmentRequest {
  int32 id = 1;
  EquipmentDto3 equipment = 2;
}

message DeleteEquipmentRequest {
  int32 id = 1;
}


message EquipmentDto3 {
  int32 id = 1;
  string name = 2;
  string description = 3;
}
